Adding Place holder to the Street and City and state fields

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
 
     <form id="form-container" class="form-container">
-        <label for="street">Street: </label><input type="text" id="street" value="">
-        <label for="city">City and State: </label><input type="text" id="city" value="">
+        <label for="street">Street: </label><input type="text" id="street" value="" placeholder="123 Broadway">
+        <label for="city">City and State: </label><input type="text" id="city" value="" placeholder="New York, NY">
         <button id="submit-btn">Submit</button>
     </form>
 
